add many roles and check in controllers

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -42,7 +42,11 @@
     "Back":"رجوع",
     "Shop":"تسوق",
     "About":"حول",
-    "Logout":"تسجيل الخروج"
+    "Logout":"تسجيل الخروج",
+    "Roles":"الأدوار",
+    "Users":"المستخدمين",
+    "Permissions #":"عدد الصلاحيات",
+    "Users #":"عدد المستخدمين"
 
 
 }
